[project]
name = "flock-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andre Ratzenberger", email = "andre.ratzenberger@whiteduck.de" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
flock-test = "flock_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
